<resources>
    <string name="app_name">Login_Android</string>
    <string name="campo_usuario">Usuário</string>
    <string name="campo_senha">Senha</string>
    <string name="botao_entrar">Login</string>

    <string name="campo_nome">Nome de Usúario</string>
    <string name="campo_telefone">Telefone</string>
    <string name="campo_email">E-mail</string>
    <string name="senha_cadastro">Senha</string>
    <string name="botao_cadastro">Finalizar</string>
</resources>