<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fundo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="Cadastro"
            android:textColor="@color/white"
            android:textSize="35dp">
        </TextView>

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:textColor="@color/white"
            android:hint="@string/campo_nome"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:inputType="text"
            android:drawablePadding="20dp"
            android:backgroundTint="@color/white">
        </EditText>
        <EditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:textColor="@color/white"
            android:hint="@string/campo_telefone"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:inputType="phone"
            android:padding="20dp"
            android:backgroundTint="@color/white"
            android:drawablePadding="20dp">
        </EditText>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:textColor="@color/white"
            android:hint="@string/campo_email"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:backgroundTint="@color/white"
            android:drawablePadding="20dp">
        </EditText>
        <EditText
            android:id="@+id/senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:textColor="@color/white"
            android:hint="@string/campo_senha"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:padding="20dp"
            android:backgroundTint="@color/white"
            android:drawablePadding="20dp">
        </EditText>
        <Button
            android:id="@+id/botao_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/senha"
            android:layout_margin="40dp"
            android:backgroundTint="#E3E1E4"
            android:text="@string/botao_cadastro"
            android:textColor="@color/black">
        </Button>

        <TextView
            android:id="@+id/fazer_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fazer Login"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp">
        </TextView>


    </LinearLayout>

</ScrollView>